--- a/index.html
+++ b/index.html
@@ -8,23 +8,29 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="cads">
+  <div class="cards">
     <div class="card1">
-      Sedans
-      Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
+      <img src="images/icon-sedans.svg" alt="sedan">
+      <h1>Sedans</h1>
+      <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
+      <a class="btn" href="#">Learn More</a>
     </div>
     <div class="card2">
-      SUVs
-      Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
+      <img src="images/icon-suvs.svg" alt="suvs">
+      <h1>Suvs</h1>
+      <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
+      <a class="btn" href="#">Learn More</a>
     </div>
     <div class="card3">
-      Luxury
-      Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
+      <img src="images/icon-luxury.svg" alt="">
+      <h1>Luxury</h1>
+      <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
+      <a class="btn" href="#">Learn More</a>
     </div>
   </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Junior Rodrigues</a>.
+    <span>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.</span>
+    <span>Coded by <a href="https://www.frontendmentor.io/profile/juniorrdgs">Junior Rodrigues</a>.</span>
   </div>
 </body>
 </html>
